k8s/oauth2-proxy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy-route
  namespace: oauth2-proxy
spec:
  parentRefs:
  - name: main-gateway
    namespace: kube-system
  hostnames:
  - "oauth2.sikiru.co.uk"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: oauth2-proxy
      port: 80 # The internal service port of the proxy
